Updated with version: 3.22.0 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -419,6 +419,10 @@
     "message":"Разреши EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"Разреши EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"руски и украински",
     "description":"Language names for a filter list"
@@ -817,6 +821,46 @@
   },
   "lang_turkish":{
     "message":"турски",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"каталонски",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"китайски (опростено)",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"китайски (традиционно)",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"хърватски",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"норвежки",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"сръбски",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"словенски",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"виетнамски",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"португалски (Португалия)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"португалски (Бразилия)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1235,6 +1279,14 @@
     "message":"Поддръжка",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Преводи",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"Как да помогнете в превода на AdBlock [[повече тук]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Докладвай реклама в страницата",
     "description":"Entry in the AdBlock button menu"
@@ -1605,6 +1657,10 @@
     "message":"Можете да го включите в подкрепа на любимите си сайтовете пак, като по-долу изберете „Позволи определени ненатрапчиви реклами“.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"Абонирайте се или за „EasyList Lite“, или за „EasyList“, но не и за двата едновременно.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock ползва EasyList за блокиране на реклами в повечето сайтове.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1716,5 +1772,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Първоначален запис: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Позволи да посоча екранния език на AdBlock",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Показвай AdBlock на",
+    "description":"Text shown before language selector drop-down."
   }
 }
