--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -823,6 +823,46 @@
     "message":"Turc",
     "description":"Language name"
   },
+  "lang_catalan":{
+    "message":"Català",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Xinès simplificat",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Xinès tradicional",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Croat",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Noruec",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Serbi",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Eslovè",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamita",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portuguès (Brasil)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portuguès (Portugal)",
+    "description":"Language name"
+  },
   "filtereasylist_plus_bulgarian":{
     "message":"Búlgar",
     "description":"A filter list"
@@ -1732,5 +1772,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Entrada original: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Deixeu-me triar l'idioma de visualització d'AdBlock",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Mostra l'AdBlock en",
+    "description":"Text shown before language selector drop-down."
   }
 }
