--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -419,6 +419,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"Rusça ve Ukraynaca",
     "description":"Language names for a filter list"
@@ -817,6 +821,46 @@
   },
   "lang_turkish":{
     "message":"Türkçe",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Katalanca",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Basitleştirilmiş Çince",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Geleneksel Çince",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Hırvatça",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norveççe",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Sırpça",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slovence",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamca",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portekizce (Brezilya)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portekizce (Portekiz)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1235,6 +1279,14 @@
     "message":"Destek",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Çeviriler",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"[[here]] buradan AdBlock'a çeviri konusunda yardımcı olmak için daha fazla bilgi edinin",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Bu sayfada bir reklam bildir",
     "description":"Entry in the AdBlock button menu"
@@ -1605,6 +1657,10 @@
     "message":"Bunu yeniden açabilir ve aşağıdaki \"Müdahale etmeyen bazı sitelere izin ver\" özelliğini seçerek sevdiğiniz internet sitelerine destek olabilirsiniz.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"Biz \"EasyList Lite\" yada \"EasyList\" listelerine abone olmanızı öneriyoruz fakat ikisine birden değil.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock çoğu websitede reklamları engellemek için EasyList kullanır.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1716,5 +1772,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Orijinal giriş: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"AdBlock'ın görüntüleme dilini seçmeme izin ver",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"AdBlock içinde görüntüleme",
+    "description":"Text shown before language selector drop-down."
   }
 }
