Updated with version: 3.23.0 changes

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -519,6 +519,10 @@
     "message":"تحرير عوامل التصفية الخاصة بك يدوياً:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"تحرير عوامل التصفية الخاصة بك يدوياً:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"تعديل عوامل التصفية المعطلة:",
     "description":"Subtitle on the 'Customize' tab"
