--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -268,7 +268,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Позволи анонимно събиране от AdBlock на данни за ползваните филтри и сведения за блокираното от тях съдържание",
+    "message":"Позволи анонимен сбор от AdBlock на данни за ползваните филтри и сведения за блокираното от тях съдържание",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -524,8 +524,12 @@
     "description":"Message of the URL and CSS blocking sections"
   },
   "manualfilteredit":{
-    "message":"Да редактирате филтрите наръка:",
+    "message":"Ръчно редактиране на филтрите:",
     "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit_yt":{
+    "message":"Ръчно редактиране на филтрите:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
   },
   "manualexcludefilteredit":{
     "message":"Да редактирате забранените филтри:",
