--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -487,6 +487,10 @@
     "message":"Ručně upravit vlastní filtry:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ručně upravit vlastní filtry:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Upravit zakázané filtry:",
     "description":"Subtitle on the 'Customize' tab"
