--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -429,6 +429,10 @@
     "message":"Redigér dine filtre manuelt:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Redigér dine filtre manuelt:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Redigér deaktiverede filtre:",
     "description":"Subtitle on the 'Customize' tab"
