--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -419,6 +419,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"russisch und ukrainisch",
     "description":"Language names for a filter list"
@@ -522,6 +526,10 @@
   "manualfilteredit":{
     "message":"Filter manuell bearbeiten:",
     "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit_yt":{
+    "message":"Filter manuell bearbeiten:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
   },
   "manualexcludefilteredit":{
     "message":"Deaktivierte Filter bearbeiten:",
@@ -817,6 +825,46 @@
   },
   "lang_turkish":{
     "message":"Türkisch",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Katalanisch",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Vereinfachtes Chinesisch",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Chinesisch (traditionell)",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Kroatisch",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norwegisch",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Serbisch",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slowenisch",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamesisch",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portugiesisch (Brasilien)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portugiesisch (Portugal)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1235,6 +1283,14 @@
     "message":"Support",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Übersetzungen",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"Erfahren Sie mehr darüber, wie Sie helfen können AdBlock zu übersetzen [[here]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Werbung auf dieser Seite melden",
     "description":"Entry in the AdBlock button menu"
@@ -1605,6 +1661,10 @@
     "message":"Sie können dies wieder aktivieren und die Webseiten die Sie mögen unterstützen indem Sie weiter unten \"Einige nicht aufdringliche Werbung zulassen\" aktivieren.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"Wir empfehlen entweder \"EasyList Lite\" oder \"EasyList\" zu abonnieren, jedoch nicht beide Listen.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock verwendet EasyList um Werbung auf den meisten Webseiten zu entfernen.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1716,5 +1776,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Originaleintrag: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Sprache in der AdBlock angezeigt werden soll auswählen",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"AdBlock anzeigen in",
+    "description":"Text shown before language selector drop-down."
   }
 }
