--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -519,6 +519,10 @@
     "message":"Επεξεργαστείτε χειροκίνητα τα φίλτρα σας:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Επεξεργαστείτε χειροκίνητα τα φίλτρα σας:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Επεξεργασία απενεργοποιημένων φίλτρων:",
     "description":"Subtitle on the 'Customize' tab"
