--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -523,6 +523,10 @@
     "message":"Editar manualmente tus filtros:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Editar manualmente tus filtros:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Editar filtros desactivados:",
     "description":"Subtitle on the 'Customize' tab"
