--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -499,6 +499,10 @@
     "message":"Muokkaa suodattimia manuaalisesti:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Muokkaa suodattimia manuaalisesti:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Muokkaa suodattimia, jotka poistettu käytöstä:",
     "description":"Subtitle on the 'Customize' tab"
