--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -419,6 +419,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"Russe et ukrainien",
     "description":"Language names for a filter list"
@@ -522,6 +526,10 @@
   "manualfilteredit":{
     "message":"Modifier vos filtres manuellement :",
     "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit_yt":{
+    "message":"Modifier vos filtres manuellement :",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
   },
   "manualexcludefilteredit":{
     "message":"Modifier les filtres désactivés :",
@@ -817,6 +825,46 @@
   },
   "lang_turkish":{
     "message":"Turc",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Catalan",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Chinois simplifié",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Chinois traditionnel",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Croate",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norvégien",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Serbe",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slovène",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamien",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portugais (Brésil)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portugais (Portugal)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1235,6 +1283,14 @@
     "message":"Support",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Traductions",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"En savoir plus sur comment aider à traduire AdBlock [[ici]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Signaler une publicité sur cette page",
     "description":"Entry in the AdBlock button menu"
@@ -1605,6 +1661,10 @@
     "message":"Vous pouvez vous y réabonner et soutenir les sites que vous aimez en sélectionnant \"Autoriser certaines publicités non-intrusives\" ci-dessous.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"Il est recommandé de soit s'abonner à \"EasyList Lite\", soit \"EasyList\", mais pas les deux.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock utilise EasyList pour bloquer la publicité sur la plupart des sites.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1716,5 +1776,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Entrée d'origine : ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Me laisser choisir la langue dans laquelle AdBlock est affiché",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Afficher AdBlock en",
+    "description":"Text shown before language selector drop-down."
   }
 }
