--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -515,6 +515,10 @@
     "message":"Szűrők manuális szerkesztése:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Szűrők manuális szerkesztése:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Letiltott szűrők szerkesztése:",
     "description":"Subtitle on the 'Customize' tab"
