--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -439,6 +439,10 @@
     "message":"Edit secara Manual filter anda:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Edit secara Manual filter anda:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Edit filter nonaktif:",
     "description":"Subtitle on the 'Customize' tab"
