--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -515,6 +515,10 @@
     "message":"手動でフィルターを編集：",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"手動でフィルターを編集：",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"無効フィルタの編集：",
     "description":"Subtitle on the 'Customize' tab"
