--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -425,6 +425,10 @@
     "message":"Manuāli rediģēt filtrus:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Manuāli rediģēt filtrus:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Rediģēt atspējotos filtrus:",
     "description":"Subtitle on the 'Customize' tab"
