--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -443,6 +443,10 @@
     "message":"Manuelt endre dine filtere:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Manuelt endre dine filtere:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Rediger deaktiverte filtre:",
     "description":"Subtitle on the 'Customize' tab"
