--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -443,6 +443,10 @@
     "message":"Ręcznie edytować własne filtry:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ręcznie edytować własne filtry:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Edytuj zablokowane filtry:",
     "description":"Subtitle on the 'Customize' tab"
