--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -523,6 +523,10 @@
     "message":"Редактирование фильтров вручную:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Редактирование фильтров вручную:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Редактировать отключенные фильтры:",
     "description":"Subtitle on the 'Customize' tab"
