--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -435,6 +435,10 @@
     "message":"Ručne upraviť vlastné filtre:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ručne upraviť vlastné filtre:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Upraviť vypnuté filtre:",
     "description":"Subtitle on the 'Customize' tab"
