--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -503,6 +503,10 @@
     "message":"Ročno uredite vaše filtre:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ročno uredite vaše filtre:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Uredi izklopljene filtre:",
     "description":"Subtitle on the 'Customize' tab"
