--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -439,6 +439,10 @@
     "message":"Ručno uredite vaše filtere:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ručno uredite vaše filtere:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Uredi onemogućene filtere:",
     "description":"Subtitle on the 'Customize' tab"
