--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -479,6 +479,10 @@
     "message":"Redigera dina filter manuellt:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Redigera dina filter manuellt:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Redigera inaktiverade filter:",
     "description":"Subtitle on the 'Customize' tab"
