--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -507,6 +507,10 @@
     "message":"Налаштувати фільтри вручну:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Налаштувати фільтри вручну:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Відредагуйте вимкнені фільтри:",
     "description":"Subtitle on the 'Customize' tab"
