--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -511,6 +511,10 @@
     "message":"Chỉnh sửa bộ lọc bằng tay:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Chỉnh sửa bộ lọc bằng tay:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Chỉnh sửa bộ lọc bị vô hiệu hóa:",
     "description":"Subtitle on the 'Customize' tab"
