--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -527,6 +527,10 @@
     "message":"手动编辑您的过滤规则：",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"手动编辑您的过滤规则：",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"编辑禁用的过滤列表项目",
     "description":"Subtitle on the 'Customize' tab"
@@ -821,6 +825,46 @@
   },
   "lang_turkish":{
     "message":"土耳其文",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"加泰罗尼亚文",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"简体中文",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"繁体中文",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"克罗地亚文",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"挪威文",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"塞尔维亚文",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"斯洛文尼亚文",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"越南文",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"葡萄牙文(巴西)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"葡萄牙文(葡萄牙)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1732,5 +1776,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"原始条目︰ ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"让我选择 AdBlock 的显示语言",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"以如下语言显示AdBlock",
+    "description":"Text shown before language selector drop-down."
   }
 }
