--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -451,6 +451,10 @@
     "message":"手動編輯您的過濾規則：",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"手動編輯您的過濾規則：",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"編輯被停用的清單：",
     "description":"Subtitle on the 'Customize' tab"
