--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,14 @@
 
 UNRELEASED:
 
+3.23.0:
+- Updated translations
+- Updated 'bandaids' processing to help block ads on certain web sites. (#286) 
+- Updated to ABP Core 1.13.5 (#287)
+
+3.22.1:
+- Added the logging of the opening of AdBlock options page. (#283)
+
 3.22.0:
 - Updated translations
 - Updated the logging of user selections in the AdBlock popup menu. (#282)
