--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -527,6 +527,10 @@
     "message":"Edita manualment els vostres filtres:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Edita manualment els vostres filtres:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Edita els filtres desactivats:",
     "description":"Subtitle on the 'Customize' tab"
