--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -527,6 +527,10 @@
     "message":"Manually edit your filters:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Manually edit your filters:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Edit disabled filters:",
     "description":"Subtitle on the 'Customize' tab"
