--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -515,6 +515,10 @@
     "message":"Ručno urediti svoje filtere:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Ručno urediti svoje filtere:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Uredi onemogućene filtere:",
     "description":"Subtitle on the 'Customize' tab"
