--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -515,6 +515,10 @@
     "message":"Modificare manualmente i filtri:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Modificare manualmente i filtri:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Modifica i filtri disabilitati:",
     "description":"Subtitle on the 'Customize' tab"
