--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -367,6 +367,10 @@
     "message":"필터를 구독할수록 AdBlock의 속도는 느려집니다. 과도하게 많은 구독 필터를 사용하면 브라우저가 작동을 중지할 수도 있습니다. 그래도 구독하려면 확인을 누르세요.",
     "description":"Confirmation message shown to user if they try to subscribe to too many lists. The user will have two options: OK and Cancel."
   },
+  "unsubscribe_from_all_confirmation":{
+    "message":"모든 필터 목록을 사용하지 않도록 설정한다면 AdBlock은 광고를 차단할 수 없습니다. AdBlock을 일시 중지하는 것을 추천해 드립니다. 그래도 이 목록을 구독 해지하시겠습니까?",
+    "description":"Confirmation message shown to user if they try to unsubscribe from all filter lists. The user will have two options: OK and Cancel."
+  },
   "filterstabtitle":{
     "message":"필터 목록 구독",
     "description":"Title of the Filter lists tab of the Options page"
@@ -415,6 +419,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"러시아어와 우크라이나어",
     "description":"Language names for a filter list"
@@ -445,6 +453,10 @@
   },
   "filtermalware":{
     "message":"악성 프로그램으로부터 보호",
+    "description":"A filter list"
+  },
+  "filterbitcoin_mining_protection":{
+    "message":"암호화폐 (비트코인) 채굴로부터 보호",
     "description":"A filter list"
   },
   "filterlatvian":{
@@ -514,6 +526,10 @@
   "manualfilteredit":{
     "message":"필터를 수동으로 수정하기:",
     "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit_yt":{
+    "message":"필터를 수동으로 수정하기:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
   },
   "manualexcludefilteredit":{
     "message":"비활성 필터 편집:",
@@ -809,6 +825,46 @@
   },
   "lang_turkish":{
     "message":"터키어",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"카탈로니아어",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"중국어 간체",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"중국어 번체",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"크로아티아어",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"노르웨이어",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"세르비아어",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"슬로베니아어",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"베트남어",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"포르투갈어 (브라질)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"포르투갈어 (포르투갈)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1203,6 +1259,10 @@
     "message":"AdBlock이 마음에 드시나요? 저희를 후원해주세요!",
     "description":"Text of a donate link in the toolbar button menu"
   },
+  "help_and_feedback":{
+    "message":"도움말 및 의견",
+    "description":"Text of a help link in the toolbar button menu"
+  },
   "donate_to_youtube_adblock":{
     "message":"AdBlock on YouTube™가 마음에 드시나요? 저희를 후원해주세요!",
     "description":"Text of a donate link in the toolbar button menu. 'This' refers to the 'AdBlock on YouTube' extension."
@@ -1222,6 +1282,14 @@
   "tabsupport":{
     "message":"지원",
     "description":"A tab on the Options page"
+  },
+  "tabtranslations":{
+    "message":"번역",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"[[여기]]에서 AdBlock 번역에 도움을 보탤 수 있는 방법을 알아보세요",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
   },
   "report_ad_on_page":{
     "message":"미차단 광고 보고",
@@ -1593,6 +1661,26 @@
     "message":"\"비침입형 광고 허용\"을 눌러 좋아하는 사이트를 후원하실 수 있습니다.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"\"EasyList\" 또는 \"EasyList Lite\" 둘 중 하나를 구독하는 것을 추천해 드립니다만, 이 둘을 동시에 구독하지는 마십시오.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_disable_done":{
+    "message":"AdBlock은 EasyList를 사용하여 대부분의 웹사이트에서 광고를 차단합니다.",
+    "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_disable_how_to_reenable":{
+    "message":"이를 켜두는 것을 추천해 드립니다. 만약 실수로 구독을 해지했다면 지금 \"EasyList\"를 선택하여 더 많은 광고를 차단하실 수 있습니다.",
+    "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_lite_disable_done":{
+    "message":"AdBlock은 EasyList 또는 EasyList Lite를 사용하여 대부분의 웹사이트에서 광고를 차단합니다.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_lite_disable_how_to_reenable":{
+    "message":"이를 켜두는 것을 추천해 드립니다. 만약 실수로 구독을 해지했다면 지금 \"EasyList\" 또는 \"EasyList Lite\"를 선택하여 더 많은 광고를 차단하실 수 있습니다.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "acceptable_ads_content_blocking_disbled_message":{
     "message":"Safari 콘텐츠 차단 설정이 켜져 있어 허용할만한 광고 구독을 해지했습니다. 둘 중 단 하나의 설정만 켤 수 있습니다. ([[어째서인가요?]])",
     "description":"Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
@@ -1688,5 +1776,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"기존 항목: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"AdBlock 사용 언어를 직접 선택하기",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"AdBlock을 다음 언어로 사용",
+    "description":"Text shown before language selector drop-down."
   }
 }
