--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -515,6 +515,10 @@
     "message":"Edite seus filtros manualmente:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Edite seus filtros manualmente:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Editar os filtros desabilitados:",
     "description":"Subtitle on the 'Customize' tab"
