--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -507,6 +507,10 @@
     "message":"Editează manual filtrele:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Editează manual filtrele:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Editare filtre dezactivate:",
     "description":"Subtitle on the 'Customize' tab"
