--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -527,6 +527,10 @@
     "message":"Filtrelerinizi elle düzenleyin:",
     "description":"Subtitle on the 'Customize' tab"
   },
+  "manualfilteredit_yt":{
+    "message":"Filtrelerinizi elle düzenleyin:",
+    "description":"Subtitle on the 'General' tab of AdBlock on YouTube"
+  },
   "manualexcludefilteredit":{
     "message":"Engelli filtreleri düzenleyin:",
     "description":"Subtitle on the 'Customize' tab"
